# SOM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/colormaps/: CMakeLists.txt  main.cpp
examples/data approximation/: CMakeLists.txt
examples/deep analysis/: CMakeLists.txt  main.cpp
examples/image as dataset/: CMakeLists.txt  main.cpp
examples/real-time training/: CMakeLists.txt  main.cpp
examples/regression/: CMakeLists.txt  main.cpp
examples/save and load/: CMakeLists.txt  main.cpp
examples/simple training/: CMakeLists.txt  main.cpp
examples/single channel analysis/: CMakeLists.txt  main.cpp
examples/training process/: CMakeLists.txt  main.cpp
som/: CMakeLists.txt
som/include/private/: trainer.hpp
som/include/private/computing/: computing.hpp
som/include/private/computing/kernels/: angular_distance_kernel.hpp  canberra_distance_kernel.hpp  chebyshev_distance_kernel.hpp  cosine_distance_kernel.hpp  euclidean_distance_kernel.hpp  kernel.hpp  mae_distance_kernel.hpp  manhattan_distance_kernel.hpp  minkowski_distance_kernel.hpp  mse_distance_kernel.hpp  sad_distance_kernel.hpp  squared_distance_kernel.hpp  ssd_distance_kernel.hpp  taxicab_distance_kernel.hpp  topological_distance_kernel.hpp  weight_distance_kernel.hpp
som/include/private/model/: model.hpp  normalizer.hpp
som/include/private/model/grid/: grid.hpp  hex.hpp  hexagon_grid.hpp  rectangle_grid.hpp
som/include/public/: som.hpp  som_types.hpp  types.hpp  version.hpp
som/src/: som.cpp  trainer.cpp
som/src/computing/: computing.cpp
som/src/computing/kernels/: angular_distance_kernel.cpp  canberra_distance_kernel.cpp  chebyshev_distance_kernel.cpp  cosine_distance_kernel.cpp  euclidean_distance_kernel.cpp  kernel.cpp  mae_distance_kernel.cpp  manhattan_distance_kernel.cpp  minkowski_distance_kernel.cpp  mse_distance_kernel.cpp  sad_distance_kernel.cpp  squared_distance_kernel.cpp  ssd_distance_kernel.cpp  taxicab_distance_kernel.cpp  topological_distance_kernel.cpp  weight_distance_kernel.cpp
som/src/model/: model.cpp  normalizer.cpp
som/src/model/grid/: grid.cpp  hex.cpp  hexagon_grid.cpp  rectangle_grid.cpp
som/test/: CMakeLists.txt
som/test/normalization/: CMakeLists.txt  main.cpp
som/test/opencl host/: main.cpp
som/test/saved model/: CMakeLists.txt  main.cpp
som/test/test normalize/: CMakeLists.txt  main.cpp
som/test/test opencl/: CMakeLists.txt  main.cpp
som/test/test opencl host/: CMakeLists.txt  main.cpp
som/test/test saved model/: main.cpp
som/test/test topological kernel/: CMakeLists.txt  main.cpp
som/test/test weight kernels/: CMakeLists.txt  main.cpp
som/test/topological distance kernel/: CMakeLists.txt
som/test/weight distance kernels/: CMakeLists.txt  main.cpp
view/: CMakeLists.txt  som_cv_view.cpp  som_cv_view.hpp
view/include/: cv_view.hpp  pseudocolor_schemes.hpp  som_cv_view.hpp
view/src/: cv_view.cpp  pseudocolor_schemes.cpp  som_cv_view.cpp
