cmake_minimum_required(VERSION 2.8)

project(som)

add_subdirectory(image\ as\ dataset)
add_subdirectory(real-time\ training)
add_subdirectory(regression)
add_subdirectory(save\ and\ load)
add_subdirectory(simple\ training)
add_subdirectory(single\ channel\ analysis)
add_subdirectory(deep\ analysis)


