cmake_minimum_required(VERSION 2.8)

project(examples)

add_subdirectory(image\ as\ dataset)
add_subdirectory(real-time\ training)
add_subdirectory(data\ approximation)
add_subdirectory(save\ and\ load)
add_subdirectory(simple\ training)
add_subdirectory(single\ channel\ analysis)
add_subdirectory(deep\ analysis)
add_subdirectory(training\ process)
add_subdirectory(colormaps)


